recursion.cons.last.Last.scala.error
Compilation error:
Last:4: error: not found: value dernier
  else dernier(l.tail)
       ^